--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="main">
             <div class="upload-section">
-                <input type="file" id="fileInput">
+                <input type="file" id="fileInput" multiple>
                 <button onclick="uploadFile()">Upload</button>
             </div>
             <div class="slide-content">
