--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
         </div>
         <div class="main">
             <div class="upload-section">
-                <input type="file" id="fileInput" multiple>
+                <h3>Upload Files</h3>
+                <p class="file-types">Supported formats: .ppt, .pptx, .pdf</p>
+                <input type="file" id="fileInput" multiple accept=".ppt,.pptx,.pdf">
                 <button onclick="uploadFile()">Upload</button>
             </div>
             <div class="slide-content">
